# hassimp

./: README.md  hassimp.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/a2fb3699/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/8dc51adaa75d0c688da52df5104ee52bc0f090621052ad9510f956fce6e3e70a/8.10.4/pkgdb/: package.cache
src/: Lib.hs  Main.hs
src/resources/: zz201906_test.txt
test/: Spec.hs
