name:                hassimp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hassimp#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      Lib
  other-modules:
      Paths_hassimp
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , tasty-hspec
    , tasty-quickcheck
    , split>=0.2.3.4
    , regex-tdfa
    , hashmap>=1.3.3
    , aeson>=1.5.6.0
  default-language: Haskell2010

executable hassimp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5 , hassimp, tasty-hspec , tasty-quickcheck, split>=0.2.3.4, regex-tdfa, hashmap>=1.3.3, aeson>=1.5.6.0

test-suite hasexer-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hassimp
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hassimp
    , tasty-hspec
    , tasty-quickcheck
    , split>=0.2.3.4
    , regex-tdfa
    , hashmap>=1.3.3
    , aeson>=1.5.6.0
  default-language: Haskell2010